--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,8 @@
-version: "3"
+version: "3.4"
 services:
     caddy:
+        build:
+            target: dev
         volumes:
             - "./Caddyfile:/etc/Caddyfile:ro"
             - "./Caddyfile.comm:/etc/Caddyfile.comm:ro"
