--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,8 @@
-https://localhost
+http://localhost {
+	import Caddyfile.comm
+}
 
-tls self_signed
-
-import Caddyfile.comm
+localhost:443 {
+	tls self_signed
+	import Caddyfile.comm
+}
